--- a/hackage-jsonp.cabal
+++ b/hackage-jsonp.cabal
@@ -1,4 +1,4 @@
-name:             hackagelog
+name:             hackage-jsonp
 version:          0.0.0
 license:          MIT
 license-file:     LICENSE
@@ -8,10 +8,13 @@ maintainer:       Simon Hengel <sol@typeful.net>
 build-type:       Simple
 cabal-version:    >= 1.8
 
-executable hackagelog
+executable hackage-jsonp
   ghc-options:
-      -Wall
-      -Werror
+      -Wall -Werror
+  hs-source-dirs:
+      src
+  main-is:
+      Main.hs
   build-depends:
       base
     , old-time
@@ -22,15 +25,16 @@ executable hackagelog
     , conduit
     , http-conduit
     , http-types
-  main-is:
-      Main.hs
 
 test-suite spec
   type:
       exitcode-stdio-1.0
   ghc-options:
-      -Wall
-      -Werror
+      -Wall -Werror
+  hs-source-dirs:
+      src, test
+  main-is:
+      Spec.hs
   build-depends:
       base
     , old-time
@@ -41,7 +45,7 @@ test-suite spec
     , conduit
     , http-conduit
     , http-types
+
+    -- test suite specific
     , stringbuilder
     , hspec-shouldbe
-  main-is:
-      Spec.hs
