--- a/hackage-jsonp.cabal
+++ b/hackage-jsonp.cabal
@@ -8,9 +8,15 @@ maintainer:       Simon Hengel <sol@typeful.net>
 build-type:       Simple
 cabal-version:    >= 1.8
 
+Flag Static
+        Description: Build static binaries
+        Default: False
+
 executable hackage-jsonp
   ghc-options:
       -Wall -Werror -fno-warn-orphans
+  if flag(Static)
+    ghc-options: -static -optl-static -optl-pthread                           
   hs-source-dirs:
       src
   main-is:
@@ -36,7 +42,7 @@ test-suite spec
   type:
       exitcode-stdio-1.0
   ghc-options:
-      -Wall -Werror -fno-warn-orphans
+      -Wall -fno-warn-orphans
   hs-source-dirs:
       src, test
   main-is:
